--- a/src/ButtonToggle.css
+++ b/src/ButtonToggle.css
@@ -10,6 +10,22 @@
   border-radius: 5px;
 }
 
+.Toggle:hover {
+  background-color: #ca1b1b;
+  animation: grow forwards;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(2);
+  }
+}
+
 @media (max-width: 800px) {
   .Toggle {
     position: initial;
